# claude-fm

./: .env.example  .gitignore  CATALOG.md  DEPLOY.md  README.md  pyproject.toml
content/: state.json
content/anthropic/engineering/articles/: 2024-09-19-Contextual Retrieval in AI Systems.md  2024-12-19-Building Effective AI Agents.md  2025-01-06-Claude SWE-Bench Performance.md  2025-03-20-The - think - tool - Enabling Claude to stop and think.md  2025-06-13-How we built our multi-agent research system.md  2025-06-26-Claude Desktop Extensions - One-click MCP server installation for Claude Desktop.md  2025-09-11-Writing effective tools for AI agents—using AI agents.md  2025-09-17-A postmortem of three recent issues.md  2025-09-29-Effective context engineering for AI agents.md  2025-10-16-Equipping agents for the real world with Agent Skills.md  2025-10-20-Making Claude Code more secure and autonomous with sandboxing.md  2025-11-04-Code execution with MCP - building more efficient AI agents.md  2025-11-24-Introducing advanced tool use on the Claude Developer Platform.md  2025-11-26-Effective harnesses for long-running agents.md  2026-01-09-Demystifying evals for AI agents.md  2026-01-21-Designing AI resistant technical evaluations.md  2026-02-05-Building a C compiler with a team of parallel Claudes.md  2026-02-05-Quantifying infrastructure noise in agentic coding evals.md  (+7 more)
prompts/: interpret.md  news_digest.md
src/claude_fm/: __init__.py  catalog.py  cli.py  config.py  digest.py  episode.py  feed.py  fetch.py  interpret.py  sources.py  state.py  tts.py
(+1729 files in other folders)
